dark mode fixes, fix #948

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -289,12 +289,13 @@ $transition-time: .3s !default;
 $overlay-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 100%) !default;
 
 //accordion
+$accordion-bg: transparent !default;
 $accordion-border-color: $border-color-transparent !default;
 $accordion-icon-width: 1rem !default;
 
+$accordion-button-bg: transparent !default;
 $accordion-button-active-bg: transparent !default;
 $accordion-button-active-color: inherit !default;
-
 $accordion-button-focus-border-color: $accordion-border-color !default;
 
 //alerts
