--- a/src/scss/demo.scss
+++ b/src/scss/demo.scss
@@ -124,7 +124,7 @@ $demo-icon-size: 7rem;
   border: 1px solid var(--#{$variable-prefix}border-color);
   box-shadow: $shadow;
 
-  &-default { background: linear-gradient(135deg, $white 50%, $light 50%); }
+  &-light { background: linear-gradient(135deg, $white 50%, $light 50%); }
   &-mixed { background-image: linear-gradient(135deg, $dark 50%, #fff 50%); }
   &-transparent { background: $light; }
   &-dark { background: $dark; }
