--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -1,3 +1,10 @@
+/*!
+ * Tabler (v0.9.0): _dark.scss
+ * Copyright 2018-2021 The Tabler Authors
+ * Copyright 2018-2021 codecalm
+ * Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
+ */
+
 // stylelint-disable declaration-no-important
 
 @include dark-mode {
@@ -7,6 +14,8 @@
 
     --#{$variable-prefix}card-bg: #{$dark};
     --#{$variable-prefix}card-bg-rgb: #{to-rgb($dark)};
+
+    --#{$variable-prefix}border-color: #{$dark-mode-lighten-10};
 
     color: $dark-mode-text;
     background-color: $dark-mode-darken;
@@ -116,6 +125,10 @@
   .list-group-header {
     background: $dark-mode-darken;
     border-color: $input-border-color;
+  }
+
+  .apexcharts-radialbar-area {
+    stroke: $dark-mode-lighten-10;
   }
 }
 
