--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -58,7 +58,7 @@
 
 @mixin navbar-dark {
   @include navbar-color($dark, $navbar-dark-color, $navbar-dark-brand-color, $navbar-dark-active-color, $navbar-dark-disabled-color);
-  @include scrollbar(true);
+  @include scrollbar;
 
   .input-icon-addon {
     color: rgba($dark-mode-text, .64);
