--- a/src/scss/ui/_accordion.scss
+++ b/src/scss/ui/_accordion.scss
@@ -11,6 +11,7 @@
   &:not(.collapsed) {
     font-weight: $font-weight-bold;
     border-bottom-color: transparent;
+    box-shadow: none;
 
     &:after {
       opacity: 1;
